Fixed horizontal scroll & text

--- a/static/global.css
+++ b/static/global.css
@@ -18,30 +18,6 @@ body {
   width: 100%;
 }
 
-body::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
-  background-image: url('/assets/clouds.png');
-  display: block;
-  width: 900px;
-  height: 704px;
-  left: -1em;
-  top: 5em;
-}
-
-body::before {
-  content: '';
-  position: absolute;
-  z-index: -1;
-  background-image: url('/assets/clouds.png');
-  display: block;
-  width: 900px;
-  height: 704px;
-  right: 0;
-  bottom: 25%;
-}
-
 @media (min-width: 400px) {
   body {
     font-size: 16px;
